@@ -11,6 +11,9 @@ DXGI
 	* Added lazy enumeration of adapters to Factory and Factory1.
 	* Added lazy enumeration of outputs to Adapter.
 
+Direct3D 9
+	* Fixed a bug in KeyframedAnimationSet.RegisterAnimationKeys that caused invalid values to be set.
+
 Direct3D 10
 	* Added missing StateBlockMask constructor.
 
